tests/baselines/reference/moduleResolutionWithoutExtension5.errors.txt
/src/buzz.mts(2,8): error TS2834: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.


==== /src/buzz.mts (1 errors) ====
    // Extensionless relative path dynamic import in an ES module
    import("./foo").then(x => x); // should error, ask for extension
           ~~~~~~~
!!! error TS2834: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Consider adding an extension to the import path.